Fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,14 +70,14 @@ body h2 {
 .title-mac,
 .title-ranch {
     font-size: 36px;
-    width: 400px;
+    width: 500px;
     padding: 8px;
     margin: 0 auto 16px;
     text-align: center;
 }
 
 ul.ingredients {
-    width: 260px;
+    width: 280px;
     padding-left: 30px;
 }
 
